spike/pg17/compile_graph_store.log
gcc -Wall -Wmissing-prototypes -Wpointer-arith -Wdeclaration-after-statement -Werror=vla -Wendif-labels -Wmissing-format-attribute -Wimplicit-fallthrough=3 -Wcast-function-type -Wshadow=compatible-local -Wformat-security -fno-strict-aliasing -fwrapv -fexcess-precision=standard -Wno-format-truncation -Wno-stringop-truncation -g -g -O2 -Werror=implicit-function-declaration -fstack-protector-strong -fstack-clash-protection -Wformat -Werror=format-security -fcf-protection -fno-omit-frame-pointer -fPIC -fvisibility=hidden -I. -I./ -I/usr/include/postgresql/17/server -I/usr/include/postgresql/internal -Wdate-time -D_FORTIFY_SOURCE=2 -D_GNU_SOURCE  -I/usr/include/libxml2   -c -o graph_am.o graph_am.c
In file included from /usr/include/postgresql/17/server/postgres.h:45,
                 from graph_am.c:32:
/usr/include/postgresql/17/server/c.h:940:9: error: static assertion failed: "graph store requires --with-blocksize=32 (BLCKSZ 32768)"
  940 |         _Static_assert(condition, errmessage)
      |         ^~~~~~~~~~~~~~
gph_page.h:27:1: note: in expansion of macro ‘StaticAssertDecl’
   27 | StaticAssertDecl(BLCKSZ == 32768, "graph store requires --with-blocksize=32 (BLCKSZ 32768)");
      | ^~~~~~~~~~~~~~~~
make: *** [<builtin>: graph_am.o] Error 1
